[tool.poetry]
name = "secretmessage"
version = "0.1.0"
description = ""
authors = ["GL1KK <danya_serov05@internet.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["all"], version = "^0.115.14"}
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
